fix: overflow hidden

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ body {
   background-color: #a95efa;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  
 }
 
 code {
